--- a/css/main.css
+++ b/css/main.css
@@ -228,7 +228,124 @@ nav {
 
 
     /* MAIN SECTION */
-main {
+#slider{
+    background-color: white;
+    top: 200px;
+    left: 50px;
+    width: 400px;
+    height: 300px;
+    position: fixed;
+    display: fixed;
+}
+main .wrapper #slider {
+    width: 100%;
+    height: 60vh;
+    overflow: hidden;
+    border-radius: 20px;
+    position: relative;
+}
+
+main .wrapper #slider .slide {
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+main .wrapper #slider .slide1 {
+    background-image: url(../images/logo.jpeg);
+}
+
+main .wrapper #slider .slide2 {
+    background-image: url(../images/logo.jpeg);
+}
+
+main .wrapper #slider .slide3 {
+    background-image: url(../images/logo.jpeg);
+}
+
+main .wrapper #slider .slide4 {
+    background-image: url(../images/logo.jpeg);
+}
+
+main .wrapper #slider .slide5 {
+    background-image: url(../images/logo.jpeg);
+}
+
+main .wrapper #slider .slide6 {
+    background-image: url(../images/logo.jpeg);
+}
+
+main .wrapper #slider .slide__content {
+    width: 400px;
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+main .wrapper #slider .slide__content span {
+    font-size: 80px;
+    color: #F6F5F0;
+}
+
+/* SLIDER ARROW */
+
+main .wrapper #slider .material-icons {
+    justify-content: center;
+    position: absolute;
+    top: 50%;
+    margin-top: -40px;
+    font-size: 80px;
+    color: #F6F5F0;
+}
+
+main .wrapper #slider .arrow {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    margin-top: -50px;
+    width: 0;
+    height: 0;
+}
+
+main .wrapper #slider .arrow--left {
+    left: 0px;
+}
+
+main .wrapper #slider .arrow--right {
+    right: 0px;
+}
+
+/* SLIDER DOTS */
+
+main .wrapper #slider .dots {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+main .wrapper #slider .dots .dot {
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    background: #F6F5F0;
+    margin: 0 3px;
+    cursor: pointer;
+}
+
+main .wrapper #slider .dots .dot1 {
+    background: #1107ff;
+}
+
+/* 인기 쇼핑 카테고리 */
+.grid-container {
   width: 1000px;
   height: 800px;
   float: right;
