--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 
 /* 데스크톱 */
 /* 스크린 너비가 1600px이하면 스타일 속성 적용됨 */
-@media screen and (max-width:1600px){
+@media screen and (min-width:1401px, max-width:1600px){
 
 /* 초기화 */
 * {
@@ -440,8 +440,116 @@ main .wrapper #slider .dots .dot1 {
 
 /* 태블릿PC */
 /* 스크린 너비가 1400px이하면 스타일 속성 적용됨 */
-@media screen and (max-width:1400px){}
+@media screen and (max-width:1400px){
+    /* 초기화 */
+* {
+    margin: 0;
+    padding: 0;
+  }
+
+/* COMMON */
+
+body{
+    font-family: 'Do Hyeon', sans-serif;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 1.4;
+    background: #F6F5F0;
+    margin: 0 auto;
+}
+/* HEADER */
+header{
+    width: 100%;
+}
+#main-bar{
+    align-items: center;
+}
+
+    /* Bar1 */
+#bar1{
+    background-color: black;
+    height: 60px;
+    font-size: 14px;
+    width: 100%;
+    height: 60px;
+    align-items: center; /* 모든 아이템 정중앙에 배치 */
+    position: fixed;
+}
+
+/* Bar1-left */
+#bar1-left{
+    background-color: black;
+    height: 60px;
+    font-size: 14px;
+    width: 200px;
+    height: 60px;
+}
+
+/* Bar1-middle */
+#bar1-middle{
+    background-color: lavenderblush;
+    border: 0.2rem outset blue;
+    outline: 0.2rem solid khaki;
+    border-radius: 12px;
+    margin: 0.5rem;
+    padding: 1rem;
+    top: 0px;
+    left: 150px;
+    padding-left: 500px;
+    display: fixed;
+    align-items: center; 
+    position: fixed;
+}
+
+/* SEARCH */
+.search{
+    color: #000000;
+    font-size: 20px;
+    font-weight: 700;
+    top: 11.2px;
+    left: 168px;
+    white-space: nowrap;
+    cursor: pointer;
+    align-items: center; 
+    position: fixed;
+}
+.search > .search__box{
+    height: 25px;
+    width: 410px;
+
+}
+.search > .material-icons{
+    background-color: #F6F5F0;
+    color: #000000;
+    top: 12px;
+    left: 590px;
+    height: 20px;
+    font-size: 20px;
+    cursor: pointer;
+    border: 0.1rem outset rgb(0, 0, 0);
+    align-items: center; 
+    position: fixed;
+
+}
+}
 
 /* 스마크폰 */
 /* 스크린 너비가 700px이하면 스타일 속성 적용됨 */
-@media screen and (max-width:700px){}
+@media screen and (max-width:700px){
+    /* 초기화 */
+* {
+    margin: 0;
+    padding: 0;
+  }
+
+/* COMMON */
+
+body{
+    font-family: 'Do Hyeon', sans-serif;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 1.4;
+    background: #F6F5F0;
+    margin: 0 auto;
+}
+}
