--- a/css/main.css
+++ b/css/main.css
@@ -179,6 +179,7 @@ header{
     font-size: 20px;
     align-items: center;
     position: fixed;
+    z-index: index 5;
 }
 .bar2-left>.material-icons#btn--open {
     display: block;
@@ -236,120 +237,150 @@ nav {
 
 
     /* MAIN SECTION */
-#slider{
-    background-color: white;
-    top: 200px;
-    left: 50px;
-    width: 400px;
-    height: 300px;
-    position: fixed;
-    display: fixed;
-}
-main .wrapper #slider {
-    width: 100%;
-    height: 60vh;
-    overflow: hidden;
-    border-radius: 20px;
-    position: relative;
-}
+    .inner {
+        width: 500px;
+        margin: 0 auto;
+        height: 100vh;
+        /* inner안의 모든 요소를 가운데 정렬 */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    /* MAIN SLIDER */
+    
+    .inner #slider {
+        width: 100%;
+        height: 60vh;
+        /* 범위를 넘어서는 부분은 보이지 않도록 설정 */
+        overflow: hidden;
+        /* 가장자리를 둥글게 */
+        border-radius: 20px;
+        position: relative;
+    }
+    
+    .inner #slider .slide {
+        /* 슬라이드 이미지는 원본 크기와 관계없이  */
+        /* 가운데를 기준으로 반복없이 주어진 영역을 꽉 채우도록 설정 */
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        /* 슬라이드의 화살표와 슬라이드 이미지 간의 레이어 순서를 설정하기 위한 값 */
+        position: relative;
+        z-index: 1;
+    }
+    
+    /* 여섯 장의 슬라이드 이미지를 div 태그의 배경 이미지로 지정 */
+    
+    .inner #slider .slide1 {
+        background-image: url(../images/slider/slide1.jfif);
+    }
+    
+    .inner #slider .slide2 {
+        background-image: url(../images/slider/slide2.jfif);
+    }
+    
+    .inner #slider .slide3 {
+        background-image: url(../images/slider/slide3.jfif);
+    }
+    
+    .inner #slider .slide4 {
+        background-image: url(../images/slider/slide4.jfif);
+    }
+    
+    .inner #slider .slide5 {
+        background-image: url(../images/slider/slide5.jfif);
+    }
+    
+    
+    /* SLIDER CONTENT */
+    /* 슬라이드 콘텐츠 */
+    
+    .inner #slider .slide__content {
+        /* 슬라이드 콘텐츠 영역은 #slider와 동일하게 잡아줍니다 */
+        width: 100%;
+        height: 60vh;
+        /* #slider 한가운데 콘텐츠가 위치하도록 가운데 정렬 */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .inner #slider .slide__content span {
+        font-size: 80px;
+        color: #F6F5F0;
+    }
+    
+    /* SLIDER ARROW */
+    
+    /* 슬라이드 왼쪽, 오른쪽 화살표에 공통으로 들어갈 속성 지정 */
+    
+    .inner #slider .arrow--left, .inner #slider .arrow--right {
+        /* 부모 요소인 #slider를 기준으로 절대위치를 지정 */
+        position: absolute;
+        /* #slider의 상단으로부터 #slider의 전체 높이의 50%에 해당하는 지점만큼 간격을 줍니다  */
+        top: 50%;
+        /* 크기를 80px만큼 주고 */
+        font-size: 80px;
+        /* margin-top 속성을 이용하여 그것의 절반만큼 위로 당겨줍니다 */
+        margin-top: -40px;
+        color: #F6F5F0;
+        cursor: pointer;
+        /* 슬라이드 이미지보다 위에 있도록 z-index값을 설정  */
+        z-index: 2;
+    }
+    
+    /* 왼쪽 화살표는 #slider의 왼편에 붙도록 합니다 */
+    
+    .inner #slider .arrow--left {
+        left: 0px;
+    }
+    
+    /* 오른쪽 화살표는 #slider의 오른편에 붙도록 합니다 */
+    
+    .inner #slider .arrow--right {
+        right: 0px;
+    }
+    
+    /* SLIDER DOTS */
+    
+    .inner #slider .dots {
+        /* 부모 요소인 #slider를 기준으로 절대 위치 지정 */
+        position: absolute;
+        /* #slider 맨 아래 정가운데 오도록 */
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin: 0 auto;
+        /* 슬라이드 이미지보다 위에 있는 레이어가 되도록 */
+        z-index: 2;
+        padding: 10px;
+        /* .dots 안에 있는 점들 .dot 가운데 정렬 */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    /* 슬라이드 점들 */
+    
+    .inner #slider .dots .dot {
+        width: 8px;
+        height: 8px;
+        border-radius: 5px;
+        background: #F6F5F0;
+        margin: 0 3px;
+        cursor: pointer;
+        transition: .4s ease;
+    }
+    
+    /* 슬라이드를 시작할 때 첫번째 슬라이드 이미지가 보일 것이므로
+    첫번째 점 또한 다르게 보이도록 설정  */
+    
+    .inner #slider .dots .dot1 {
+        background: #1107ff;
+        width: 30px
+    }
 
-main .wrapper #slider .slide {
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-}
-
-main .wrapper #slider .slide1 {
-    background-image: url(../images/logo.jpeg);
-}
-
-main .wrapper #slider .slide2 {
-    background-image: url(../images/logo.jpeg);
-}
-
-main .wrapper #slider .slide3 {
-    background-image: url(../images/logo.jpeg);
-}
-
-main .wrapper #slider .slide4 {
-    background-image: url(../images/logo.jpeg);
-}
-
-main .wrapper #slider .slide5 {
-    background-image: url(../images/logo.jpeg);
-}
-
-main .wrapper #slider .slide6 {
-    background-image: url(../images/logo.jpeg);
-}
-
-main .wrapper #slider .slide__content {
-    width: 400px;
-    height: 300px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-main .wrapper #slider .slide__content span {
-    font-size: 80px;
-    color: lightslategray;
-}
-
-/* SLIDER ARROW */
-
-main .wrapper #slider .material-icons {
-    justify-content: center;
-    position: absolute;
-    top: 400px;
-    margin-top: -40px;
-    font-size: 80px;
-    color: lightslategray;
-}
-
-main .wrapper #slider .arrow {
-    cursor: pointer;
-    position: absolute;
-    top: 400px;
-    margin-top: -50px;
-    width: 0;
-    height: 0;
-}
-
-main .wrapper #slider .arrow--left {
-    left: 50px;
-}
-
-main .wrapper #slider .arrow--right {
-    right: 50px;
-}
-
-/* SLIDER DOTS */
-
-main .wrapper #slider .dots {
-    position: absolute;
-    top: 400px;
-    left: 50px;
-    margin: 0 auto;
-    padding: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-main .wrapper #slider .dots .dot {
-    width: 8px;
-    height: 8px;
-    border-radius: 50%;
-    background: lightslategray;
-    margin: 0 3px;
-    cursor: pointer;
-}
-
-main .wrapper #slider .dots .dot1 {
-    background: lightslategray;
-}
 
 /* 인기 쇼핑 카테고리 */
 .grid-container {
@@ -447,109 +478,8 @@ main .wrapper #slider .dots .dot1 {
     padding: 0;
   }
 
-/* COMMON */
-
-body{
-    font-family: 'Do Hyeon', sans-serif;
-    font-size: 15px;
-    font-weight: 400;
-    line-height: 1.4;
-    background: #F6F5F0;
-    margin: 0 auto;
-}
-/* HEADER */
-header{
-    width: 100%;
-}
-#main-bar{
-    align-items: center;
-}
-
-    /* Bar1 */
-#bar1{
-    background-color: black;
-    height: 60px;
-    font-size: 14px;
-    width: 100%;
-    height: 60px;
-    align-items: center; /* 모든 아이템 정중앙에 배치 */
-    position: fixed;
-}
-
-/* Bar1-left */
-#bar1-left{
-    background-color: black;
-    height: 60px;
-    font-size: 14px;
-    width: 200px;
-    height: 60px;
-}
-
-/* Bar1-middle */
-#bar1-middle{
-    background-color: lavenderblush;
-    border: 0.2rem outset blue;
-    outline: 0.2rem solid khaki;
-    border-radius: 12px;
-    margin: 0.5rem;
-    padding: 1rem;
-    top: 0px;
-    left: 150px;
-    padding-left: 500px;
-    display: fixed;
-    align-items: center; 
-    position: fixed;
-}
-
-/* SEARCH */
-.search{
-    color: #000000;
-    font-size: 20px;
-    font-weight: 700;
-    top: 11.2px;
-    left: 168px;
-    white-space: nowrap;
-    cursor: pointer;
-    align-items: center; 
-    position: fixed;
-}
-.search > .search__box{
-    height: 25px;
-    width: 410px;
-
-}
-.search > .material-icons{
-    background-color: #F6F5F0;
-    color: #000000;
-    top: 12px;
-    left: 590px;
-    height: 20px;
-    font-size: 20px;
-    cursor: pointer;
-    border: 0.1rem outset rgb(0, 0, 0);
-    align-items: center; 
-    position: fixed;
-
-}
-}
 
 /* 스마트폰 */
 /* 스크린 너비가 700px이하면 스타일 속성 적용됨 */
 @media screen and (max-width:700px){
     /* 초기화 */
-* {
-    margin: 0;
-    padding: 0;
-  }
-
-/* COMMON */
-
-body{
-    font-family: 'Do Hyeon', sans-serif;
-    font-size: 15px;
-    font-weight: 400;
-    line-height: 1.4;
-    background: #F6F5F0;
-    margin: 0 auto;
-}
-}
