--- a/css/main.css
+++ b/css/main.css
@@ -57,6 +57,7 @@ header{
     font-size: 14px;
     width: 200px;
     height: 60px;
+
 }
 
 /* Bar1-middle */
@@ -70,7 +71,7 @@ header{
     top: 0px;
     left: 150px;
     padding-left: 500px;
-    display: fixed;
+    display: relative;
     align-items: center; 
     position: fixed;
 }
@@ -251,7 +252,7 @@ nav {
     
     .inner #slider {
         width: 100%;
-        height: 60vh;
+        height: 50vh;
         /* 범위를 넘어서는 부분은 보이지 않도록 설정 */
         overflow: hidden;
         /* 가장자리를 둥글게 */
@@ -302,8 +303,7 @@ nav {
         height: 60vh;
         /* #slider 한가운데 콘텐츠가 위치하도록 가운데 정렬 */
         display: flex;
-        justify-content: center;
-        align-items: center;
+
     }
     
     .inner #slider .slide__content span {
@@ -473,10 +473,6 @@ nav {
 /* 스크린 너비가 1400px이하면 스타일 속성 적용됨 */
 @media screen and (max-width:1400px){
     /* 초기화 */
-* {
-    margin: 0;
-    padding: 0;
-  }
 
 
 /* 스마트폰 */
