--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@ body{
     background: #F6F5F0;
     margin: 0 auto;
 }
-
+/* 모든 material-icons */
 .material-icons{
         color: #F6F5F0;
         font-size: 20px;
@@ -51,6 +51,8 @@ header{
 }
 
 /* Bar1-left */
+
+/* 로그 이미지 */
 #bar1-left{
     background-color: black;
     height: 60px;
@@ -88,11 +90,13 @@ header{
     align-items: center; 
     position: fixed;
 }
+/* SEARCH : 검색 박스 아이콘 */
 .search > .search__box{
     height: 25px;
     width: 410px;
 
 }
+/* SEARCH : 검색아이콘 */
 .search > .material-icons{
     background-color: #F6F5F0;
     color: #000000;
@@ -108,6 +112,7 @@ header{
 }
 
 /* Bar1-right */
+
 #bar1-right{
     height: 60px;
     font-size: 14px;
@@ -119,14 +124,7 @@ header{
     display: flex;
     position: fixed;
 }
-.delivery .material-icons{
-    color: #F6F5F0;
-    left: 815px;
-    top: 15px;
-    display: fixed;
-    position: fixed;
-
-}
+/* 배송지 */
 .delivery{
     color: #F6F5F0;
     font-size: 20px;
@@ -137,6 +135,18 @@ header{
     display: fixed;
     position: fixed;
 }
+
+/* delivery 배송지 입력 아이콘 */
+.delivery .material-icons{
+    color: #F6F5F0;
+    left: 815px;
+    top: 15px;
+    display: fixed;
+    position: fixed;
+
+}
+
+/* 로그인 */
 .login{
     color: #F6F5F0;
     font-size: 20px;
@@ -148,6 +158,7 @@ header{
     position: fixed;
 }
 
+/* 회원가입 */
 .signin{
     color: #F6F5F0;
     font-size: 20px;
@@ -171,7 +182,7 @@ header{
     position: fixed;
 }
 
-/* Bar2-left */
+/* Bar2-left: 햄버거 바 */
 .bar2-left{
     color: #F6F5F0;
     height: 40px;
@@ -182,10 +193,11 @@ header{
     position: fixed;
     z-index: index 5;
 }
+/* 햄버거바 여는 아이콘 */
 .bar2-left>.material-icons#btn--open {
     display: block;
 }
-
+/* 햄버거바 닫는 아이콘 */
 .bar2-left>.material-icons#btn--close {
     display: none;}
 
@@ -201,6 +213,7 @@ nav {
     transform: translateX(-100%);
     transition: .4s;
 }
+/* 햄버거바 누르면 뜨는 사이드바 */
 .item__name{
     font-size: 20px;
 }
@@ -217,7 +230,7 @@ nav {
     position: fixed;
     }   
 
-/* Bar2-middle */
+/* Bar2-middle: 오늘의 딜,고객서비스, 기프트 카드, 판매, 레지스트리 */
 #bar2-middle{
     margin-top: 2px;
     margin-left: 200px;
@@ -227,7 +240,7 @@ nav {
 }
 
 
-/* Bar2-right */
+/* Bar2-right: 'click here to change language' */
 #bar2-right{
     color: #F6F5F0;
     width: 300px;
@@ -238,6 +251,7 @@ nav {
 
 
     /* MAIN SECTION */
+/* inner */
     .inner {
         width: 500px;
         margin: 0 auto;
@@ -248,7 +262,7 @@ nav {
         align-items: center;
     }
     
-    /* MAIN SLIDER */
+    /* MAIN SLIDER: 슬라이더 */
     
     .inner #slider {
         width: 100%;
@@ -271,7 +285,7 @@ nav {
         z-index: 1;
     }
     
-    /* 여섯 장의 슬라이드 이미지를 div 태그의 배경 이미지로 지정 */
+    /* 다섯 장의 슬라이드 이미지를 div 태그의 배경 이미지로 지정 */
     
     .inner #slider .slide1 {
         background-image: url(../images/slider/slide1.jfif);
@@ -389,61 +403,80 @@ nav {
   float: right;
   background: rgb(255, 255, 255);
 }
+
+/* 인기 쇼핑 카테고리 써져있는 박스 */
 .item1{
     background-color: lightslategray;
     top: 120px;
     left: 550px;
     width: 150px;
     height: 50px;
+    justify-content: center;
+    align-content: center;
+    border-radius: 20px; /* 가장자리를 둥글게 */
     position: fixed;
     display: fixed;
 }
+
+/* 인기 쇼핑 카테고리: 모든 이미지 */
+.image{
+    width: 250px;
+    height: 180px;
+    border-radius: 20px; /* 가장자리를 둥글게 */
+    
+}
+
+/* 인기 쇼핑 카테고리: 전자제품 */
 .item2{
     background-color: lightblue;
     top: 120px;
     left: 800px;
     width: 250px;
     height: 200px;
+    border-radius: 20px; /* 가장자리를 둥글게 */
     position: fixed;
     display: fixed;
 }
-.image{
-    width: 250px;
-    height: 200px;
-}
 
+/* 인기 쇼핑 카테고리: 미용제품 */
 .item3{
     background-color: lightblue;
     top: 120px;
     left: 1200px;
     width: 250px;
     height: 200px;
+    border-radius: 20px; /* 가장자리를 둥글게 */
     float: left;
     position: fixed;
     display: fixed;
 }
+/* 인기 쇼핑 카테고리: 의류 */
 .item4{
     background-color: lightblue;
     top: 350px;
     left: 800px;
     width: 250px;
     height: 200px;
+    border-radius: 20px; /* 가장자리를 둥글게 */
     float: left;
     position: fixed;
     display: fixed;
 }
+/* 인기 쇼핑 카테고리: 가구 */
 .item5{
     background-color: lightblue;
     top: 350px;
     left: 1200px;
     width: 250px;
     height: 200px;
+    border-radius: 20px; /* 가장자리를 둥글게 */
     float: left;
     position: fixed;
     display: fixed;
 }
 
     /* FOOTER */
+/* FOOTER1 */
 #footer1{
     color: #F6F5F0;
     background-color: rgb(39, 39, 95);
@@ -455,6 +488,8 @@ nav {
     padding: 10px 0 30px;
     position: fixed;
 }
+
+/* FOOTER2 */
 #footer2{
     color: #F6F5F0;
     background-color: black;
