--- a/css/main.css
+++ b/css/main.css
@@ -129,7 +129,7 @@ header{
     font-size: 14px;
     top: 0px;
     left:0px;
-    width: 1000px;
+    right: 0px;
     height: 60px;
     align-items: center; 
     display: flex;
@@ -139,25 +139,21 @@ header{
 .delivery{
     color: #F6F5F0;
     font-size: 20px;
-    right: 100px;
-    left: 50px;
-    top: 18px;
+    right: 500px;
+    top: 12px;
     margin-left: 800px;
     justify-content: center;
     align-items: center;
     display: flex;
     position: absolute; /*absolute는 부모인 bar1을 기준으로 움직인다. */
+    
 }
 
 /* delivery 배송지 입력 아이콘 */
 .delivery .material-icons{
     color: #F6F5F0;
-    left: 815px;
-    top: 15px;
-    justify-content: center;
-    align-items: center;
     display: flex;
-    position: absolute; /*absolute는 부모인 bar1을 기준으로 움직인다. */
+    position: absolute; /*absolute는 부모인 delivery 기준으로 움직인다. */
 
 }
 
@@ -165,10 +161,8 @@ header{
 .login{
     color: #F6F5F0;
     font-size: 20px;
-    right: 100px;
-    left: 300px;
-    top: 18px;
-    margin-left: 800px;
+    right: 200px;
+    top: 10px;
     justify-content: center;
     align-items: center;
     display: fixed;
@@ -179,10 +173,8 @@ header{
 .signin{
     color: #F6F5F0;
     font-size: 20px;
-    right: 100px;
-    left: 400px;
-    top: 18px;
-    margin-left: 800px;
+    right: 50px;
+    top: 10px;
     justify-content: center;
     align-items: center;
     display: fixed;
@@ -292,6 +284,8 @@ main{
     
     #inner #slider {
         width: 30%;
+        left: 30px;
+        top: 40px;
         height: 50vh;
         /* 범위를 넘어서는 부분은 보이지 않도록 설정 */
         overflow: hidden;
@@ -425,13 +419,25 @@ main{
 
 /* 인기 쇼핑 카테고리 */
 .grid-container {
-  width: 100%;
-  height: 100%;
-  float: right;
+    width: 100%;
+    height: 100%;
+    float: right;
+    /* 슬라이드 이미지는 원본 크기와 관계없이  */
+    /* 가운데를 기준으로 반복없이 주어진 영역을 꽉 채우도록 설정 */
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 /* 인기 쇼핑 카테고리 써져있는 박스 */
-.item1{
+.item{
+        /*모든 요소를 가운데 정렬 */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+.item .item1{
     /* 배경 색 */
     background-color: lightslategray;
     /* 위치 배치 */
@@ -457,7 +463,7 @@ main{
     align-items: center;}
 
 /* 인기 쇼핑 카테고리: 전자제품 */
-.item2{
+.item .item2{
     /* 배경 색 */
     background-color: lightblue;
     /* 위치 배치 */
@@ -474,7 +480,7 @@ main{
     align-items: center;}
 
 /* 인기 쇼핑 카테고리: 미용제품 */
-.item3{
+.item .item3{
     /* 배경 색 */
     background-color: lightblue;
     /* 위치 배치 */
@@ -491,7 +497,7 @@ main{
     align-items: center;}
 
 /* 인기 쇼핑 카테고리: 의류 */
-.item4{
+.item .item4{
     /* 배경 색 */
     background-color: lightblue;
     /* 위치 배치 */
@@ -508,7 +514,7 @@ main{
     align-items: center;}
 
 /* 인기 쇼핑 카테고리: 가구 */
-.item5{
+.item .item5{
     /* 배경 색 */
     background-color: lightblue;
     /* 위치 배치 */
