--- a/css/main.css
+++ b/css/main.css
@@ -93,6 +93,7 @@ header{
     font-weight: 700;
     top: 0px;
     left: 10px;
+    outline: none;
     white-space: nowrap;
     cursor: pointer;
     align-items: center; 
@@ -220,11 +221,16 @@ nav {
     top: 40px;
     height: calc(100vh - 60px);
     width: 300px;
-    position: absolute;
+    z-index: 3;
+    position: relative;
     transform: translateX(-100%);
     transition: .4s;
 }
 /* 햄버거바 누르면 뜨는 사이드바 */
+.item{
+    z-index: 4;
+    position: relative;
+}
 .item__name{
     font-size: 20px;
 }
@@ -431,10 +437,12 @@ main{
 
 /* 인기 쇼핑 카테고리 써져있는 박스 */
 .item{
-        /*모든 요소를 가운데 정렬 */
-        display: flex;
-        justify-content: center;
-        align-items: center;
+    right:0px;
+    width: 60%;
+    /*모든 요소를 가운데 정렬 */
+    display: absolute;
+    justify-content: center;
+    align-items: center;
     }
 
 .item .item1{
@@ -447,10 +455,8 @@ main{
     height: 50px;
     position: fixed;
     border-radius: 20px; /* 가장자리를 둥글게 */
-    /* item1 안의 모든 요소를 가운데 정렬 */
-    display: flex;
-    justify-content: center;
-    align-items: center;}
+}
+
 
 /* 인기 쇼핑 카테고리: 모든 이미지 */
 .image{
@@ -531,7 +537,6 @@ main{
     align-items: center;}
 
 
-    /* FOOTER */
 /* FOOTER1 */
 #footer1{
     color: #F6F5F0;
@@ -562,13 +567,571 @@ main{
     align-items: center;}
 
 
-/* 태블릿PC */
-/* 스크린 너비가 1400px이하면 스타일 속성 적용됨 */
-@media screen and (max-width:1400px){
-    /* 초기화 */
 
 
 /* 스마트폰 */
 /* 스크린 너비가 700px이하면 스타일 속성 적용됨 */
-@media screen and (max-width:700px){
-    /* 초기화 */
+@media screen and (min-width:700px){
+
+
+/* COMMON */
+
+body{
+    font-family: 'Do Hyeon', sans-serif; /* 구글 폰트 */
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 1.4;
+    background: #F6F5F0;
+    margin: 0 auto;
+    /*새로운 라인에 요소를 시작하게 하며, 전체 너비를 다 차지하게 설정 */
+    display: block;  /* 클론코딩하는 사이트와 일치 */
+}
+/* 모든 material-icons */
+.material-icons{
+        font-size: 20px;
+        font-weight: 700;
+        padding-top: 7px;
+        padding-left: 10px;
+        white-space: nowrap;
+        cursor: pointer;
+        position: absolute;
+        }
+
+    /* HEADER */
+header{
+    width: 100%;
+    height: 100px;
+}
+#main-bar{
+    background-color: black ;     
+    align-items: center;
+
+}
+
+    /* Bar1 */
+#bar1{
+    background-color: black;
+    height: 60px;
+    font-size: 14px;
+    width: 100%;
+    align-items: center; /* 모든 아이템 정중앙에 배치 */
+    position: relative;
+    display: flex;
+}
+
+/* Bar1-left */
+
+/* 로그 이미지 */
+#bar1-left{
+    background-color: black;
+    height: 60px;
+    font-size: 14px;
+    width: 200px;
+    /*absolute는 부모인 bar1을 기준으로 움직인다. */
+    position: absolute;
+
+}
+
+/* Bar1-middle */
+/* SEARCH : 검색 박스 아이콘 담는 큰 박스 */
+#bar1-middle{
+    /* 외형 꾸미기 */
+    background-color: lavenderblush;
+    border: 0.2rem outset blue;
+    outline: 0.2rem solid khaki;
+    border-radius: 12px;
+    margin: 0.5rem;
+    padding: 1rem;
+    /* 위치 */
+    top: 0px;
+    left: 200px;
+    padding-left: 500px;
+    align-items: center; 
+    position: absolute;  /*absolute는 부모인 bar1을 기준으로 움직인다. */
+    z-index: 0;
+}
+
+/* SEARCH */
+/* SEARCH : 검색 박스 아이콘 */
+.search{
+    font-size: 20px;
+    font-weight: 700;
+    top: 0px;
+    left: 10px;
+    outline: none;
+    white-space: nowrap;
+    cursor: pointer;
+    align-items: center; 
+    position: absolute; /*absolute는 부모인 bar1을 기준으로 움직인다. */
+}
+
+/* SEARCH : 검색 박스 아이콘: "검색어를 입력하시오" 부분 */
+.search > .search__box{
+    height: 25px;
+    width: 410px;
+
+}
+/* SEARCH : 검색아이콘 */
+.search > .material-icons{
+    background-color: #F6F5F0;
+    top: 1px;
+    left: 450px;
+    height: 18px;
+    font-size: 15px;
+    font-display: center;
+    cursor: pointer;
+    border: 0.05rem outset rgb(0, 0, 0);
+    justify-content: center;
+    align-items: center;
+    position: absolute; /*absolute는 부모인 bar1을 기준으로 움직인다. */
+    display: flex;}
+
+}
+
+/* Bar1-right */
+
+#bar1-right{
+    height: 60px;
+    font-size: 14px;
+    top: 0px;
+    left:0px;
+    right: 0px;
+    height: 60px;
+    align-items: center; 
+    display: flex;
+    position: absolute; /*absolute는 부모인 bar1을 기준으로 움직인다. */
+}
+/* 배송지 */
+.delivery{
+    color: #F6F5F0;
+    font-size: 20px;
+    right: 500px;
+    top: 12px;
+    margin-left: 800px;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    position: absolute; /*absolute는 부모인 bar1을 기준으로 움직인다. */
+    
+}
+
+/* delivery 배송지 입력 아이콘 */
+.delivery .material-icons{
+    color: #F6F5F0;
+    display: flex;
+    position: absolute; /*absolute는 부모인 delivery 기준으로 움직인다. */
+
+}
+
+/* 로그인 */
+.login{
+    color: #F6F5F0;
+    font-size: 20px;
+    right: 200px;
+    top: 10px;
+    justify-content: center;
+    align-items: center;
+    display: fixed;
+    position:absolute;
+}
+
+/* 회원가입 */
+.signin{
+    color: #F6F5F0;
+    font-size: 20px;
+    right: 50px;
+    top: 10px;
+    justify-content: center;
+    align-items: center;
+    display: fixed;
+    position: absolute;
+}
+
+    /* Bar2 */
+#bar2{
+    background-color: rgb(39, 39, 95);
+    color: #F6F5F0;
+    height: 40px;
+    width: 100%;
+    font-size: 20px;
+    top: 0px;
+    align-items: center;
+    position: relative;
+
+}
+
+/* Bar2-left: 햄버거 바 */
+.bar2-left{
+    color: #F6F5F0;
+    height: 40px;
+    left: 0px;
+    width: 200px;
+    font-size: 20px;
+    align-items: center;
+    position: fixed;
+}
+/* 햄버거바 여는 아이콘 */
+.bar2-left>.material-icons#btn--open {
+    display: block;
+}
+/* 햄버거바 닫는 아이콘 */
+.bar2-left>.material-icons#btn--close {
+    display: none;}
+
+    /* nav */
+nav {
+    background: #000;
+    color: #F6F5F0;
+    font-size: 15px;
+    top: 40px;
+    height: calc(100vh - 60px);
+    width: 300px;
+    z-index: 3;
+    position: relative;
+    transform: translateX(-100%);
+    transition: .4s;
+}
+/* 햄버거바 누르면 뜨는 사이드바 */
+.item{
+    z-index: 4;
+    position: relative;
+}
+.item__name{
+    font-size: 20px;
+}
+.item__contents{
+    font-size: 15px;
+}
+#side__menu>.item>.item__name>.material-icons{
+    color: #F6F5F0;
+    font-size: 20px;
+    font-weight: 700;
+    padding-top: 7px;
+    padding-left: 10px;
+    cursor: pointer;
+    position: fixed;
+    }   
+
+/* Bar2-middle: 오늘의 딜,고객서비스, 기프트 카드, 판매, 레지스트리 */
+
+
+#bar2-middle{
+    margin-top: 2px;
+    margin-left: 200px;
+    width: 700px;
+    cursor: pointer;
+    position: fixed;
+}
+
+
+/* Bar2-right: 'click here to change language' */
+#bar2-right{
+    color: #F6F5F0;
+    width: 300px;
+    top:0px;
+    margin-top: 5px;
+    margin-left: 800px;
+    display: fixed;
+}
+
+
+    /* MAIN SECTION */
+main{
+    width: 100%;
+}
+/* inner */
+    .inner {
+        width: 500px;
+        margin: 0 auto;
+        height: 100vh;
+        left: 50px;
+        /* inner안의 모든 요소를 가운데 정렬 */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    /* MAIN SLIDER: 슬라이더 */
+    
+    #inner #slider {
+        width: 30%;
+        left: 30px;
+        top: 40px;
+        height: 50vh;
+        /* 범위를 넘어서는 부분은 보이지 않도록 설정 */
+        overflow: hidden;
+        /* 가장자리를 둥글게 */
+        border-radius: 20px;
+        position: relative;
+    }
+    
+    #inner #slider .slide {
+        /* 슬라이드 이미지는 원본 크기와 관계없이  */
+        /* 가운데를 기준으로 반복없이 주어진 영역을 꽉 채우도록 설정 */
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        /* 슬라이드의 화살표와 슬라이드 이미지 간의 레이어 순서를 설정하기 위한 값 */
+        position: relative;
+        z-index: 1;
+    }
+    
+    /* 다섯 장의 슬라이드 이미지를 div 태그의 배경 이미지로 지정 */
+    
+    #inner #slider .slide1 {
+        background-image: url(../images/slider/slide1.jfif);
+    }
+    
+    #inner #slider .slide2 {
+        background-image: url(../images/slider/slide2.jfif);
+    }
+    
+    #inner #slider .slide3 {
+        background-image: url(../images/slider/slide3.jfif);
+    }
+    
+    #inner #slider .slide4 {
+        background-image: url(../images/slider/slide4.jfif);
+    }
+    
+    #inner #slider .slide5 {
+        background-image: url(../images/slider/slide5.jfif);
+    }
+    
+    
+    /* SLIDER CONTENT */
+    /* 슬라이드 콘텐츠 */
+    
+    #inner #slider .slide__content {
+        /* 슬라이드 콘텐츠 영역의 크기*/
+        width: 400px;
+        height: 50vh;
+        /* #slider 한가운데 콘텐츠가 위치하도록 가운데 정렬 */
+        display: flex;
+
+    }
+    
+    #inner #slider .slide__content span {
+        font-size: 80px;
+        color: #F6F5F0;
+    }
+    
+    /* SLIDER ARROW */
+    
+    /* 슬라이드 왼쪽, 오른쪽 화살표에 공통으로 들어갈 속성 지정 */
+
+    #inner #slider .arrow--left, #inner #slider .arrow--right {
+        /* 부모 요소인 #slider를 기준으로 절대위치를 지정 */
+        position: absolute;
+        /* #slider의 상단으로부터 #slider의 전체 높이의 50%에 해당하는 지점만큼 간격을 줍니다  */
+        top: 50%;
+        /* 글자 크기를 80px만큼 주고 */
+        font-size: 80px;
+        /* margin-top 속성을 이용하여 그것의 절반만큼 위로 당겨줍니다 */
+        margin-top: -40px;
+        color: #000000;
+        cursor: pointer;
+        /* 슬라이드 이미지보다 위에 있도록 z-index값을 설정  */
+        z-index: 2;
+    }
+    
+    /* 왼쪽 화살표는 #slider의 왼편에 붙도록 합니다 */
+    
+    #inner #slider .arrow--left {
+        left: 0px;
+    }
+    
+    /* 오른쪽 화살표는 #slider의 오른편에 붙도록 합니다 */
+    
+    #inner #slider .arrow--right {
+        right: 0px;
+    }
+    
+    /* SLIDER DOTS */
+    
+    #inner #slider .dots {
+        /* 부모 요소인 #slider를 기준으로 절대 위치 지정 */
+        position: absolute;
+        /* #slider 맨 아래 정가운데 오도록 */
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin: 0 auto;
+        /* 슬라이드 이미지보다 위에 있는 레이어가 되도록 */
+        z-index: 2;
+        padding: 10px;
+        /* .dots 안에 있는 점들 .dot 가운데 정렬 */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    /* 슬라이드 점들 */
+    
+    #inner #slider .dots .dot {
+        width: 8px;
+        height: 8px;
+        border-radius: 5px;
+        color: #000000;
+        background:#F6F5F0;
+        margin: 0 3px;
+        cursor: pointer;
+        transition: .4s ease;
+    }
+    
+    /* 슬라이드를 시작할 때 첫번째 슬라이드 이미지가 보일 것이므로
+    첫번째 점 또한 다르게 보이도록 설정  */
+    
+    #inner #slider .dots .dot1 {
+        background: #1107ff;
+        width: 30px
+    }
+
+
+/* 인기 쇼핑 카테고리 */
+.grid-container {
+    width: 100%;
+    height: 100%;
+    float: right;
+    /* 슬라이드 이미지는 원본 크기와 관계없이  */
+    /* 가운데를 기준으로 반복없이 주어진 영역을 꽉 채우도록 설정 */
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+/* 인기 쇼핑 카테고리 써져있는 박스 */
+.item{
+    right:0px;
+    width: 60%;
+    /*모든 요소를 가운데 정렬 */
+    display: absolute;
+    justify-content: center;
+    align-items: center;
+    }
+
+.item .item1{
+    /* 배경 색 */
+    background-color: lightslategray;
+    /* 위치 배치 */
+    top: 120px;
+    left: 550px;
+    width: 150px;
+    height: 50px;
+    position: fixed;
+    border-radius: 20px; /* 가장자리를 둥글게 */
+    /*모든 요소를 가운데 정렬 */
+    display: absolute;
+    justify-content: center;
+    align-items: center;
+}
+
+
+/* 인기 쇼핑 카테고리: 모든 이미지 */
+.image{
+    width: 250px;
+    height: 180px;
+    border-radius: 20px; /* 가장자리를 둥글게 */
+    /* image 안의 모든 요소를 가운데 정렬 */
+    display: flex;
+    justify-content: center;
+    align-items: center;}
+
+/* 인기 쇼핑 카테고리: 전자제품 */
+.item .item2{
+    /* 배경 색 */
+    background-color: lightblue;
+    /* 위치 배치 */
+    top: 120px;
+    left: 800px;
+    width: 250px;
+    height: 200px;
+    float: left;
+    border-radius: 20px;    /* 가장자리를 둥글게 */
+    position: fixed;
+    /* item5 안의 모든 요소를 가운데 정렬 */
+    display: flex;
+    justify-content: center;
+    align-items: center;}
+
+/* 인기 쇼핑 카테고리: 미용제품 */
+.item .item3{
+    /* 배경 색 */
+    background-color: lightblue;
+    /* 위치 배치 */
+    top: 120px;
+    left: 1200px;
+    width: 250px;
+    height: 200px;
+    float: left;
+    border-radius: 20px;     /* 가장자리를 둥글게 */
+    position: fixed;
+    /* item3 안의 모든 요소를 가운데 정렬 */
+    display: flex;
+    justify-content: center;
+    align-items: center;}
+
+/* 인기 쇼핑 카테고리: 의류 */
+.item .item4{
+    /* 배경 색 */
+    background-color: lightblue;
+    /* 위치 배치 */
+    top: 350px;
+    left: 800px;
+    width: 250px;
+    height: 200px;
+    float: left;
+    border-radius: 20px;     /* 가장자리를 둥글게 */
+    position: fixed;
+    /* item4 안의 모든 요소를 가운데 정렬 */
+    display: flex;
+    justify-content: center;
+    align-items: center;}
+
+/* 인기 쇼핑 카테고리: 가구 */
+.item .item5{
+    /* 배경 색 */
+    background-color: lightblue;
+    /* 위치 배치 */
+    top: 350px;
+    left: 1200px;
+    width: 250px;
+    height: 200px;
+    float: left;
+    border-radius: 20px;   /* 가장자리를 둥글게 */
+    position: fixed;
+    /* item5 안의 모든 요소를 가운데 정렬 */
+    display: flex;
+    justify-content: center;
+    align-items: center;}
+
+/* FOOTER1 */
+#footer1{
+    color: #F6F5F0;
+    background-color: rgb(39, 39, 95);
+    font-size: 18px;
+    width: 100%;
+    height: 10%;
+    bottom: 20px;
+    padding: 10px 0 30px;
+    position: flex;
+    /* footer1 안의 모든 요소를 가운데 정렬 */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* FOOTER2 */
+#footer2{
+    color: #F6F5F0;
+    background-color: black;
+    font-size: 20px;
+    width: 100%;
+    bottom: 0px;
+    height: 10%;
+    padding: 10px 0 30px;
+    position: flex;
+    /* footer2 안의 모든 요소를 가운데 정렬 */
+    display: flex;
+    justify-content: center;
+    align-items: center;}
