--- a/css/main.css
+++ b/css/main.css
@@ -196,7 +196,7 @@ header{
     top: 0px;
     left:0px;
     width: 200px;
-    height: 60px;
+    height: 40px;
     align-items: center; 
     display: fixed;
     position: absolute; /*absolute는 부모를 기준으로 움직인다. */
@@ -209,7 +209,7 @@ header{
 .material-icons#btn--close {
     display: none;}
 
-    /* nav */
+    /* nav */ /* 햄버거바 누르면 뜨는 사이드바*/
 nav {
     background: #000;
     color: #F6F5F0;
@@ -222,7 +222,7 @@ nav {
     transform: translateX(-100%);
     transition: .4s;
 }
-/* 햄버거바 누르면 뜨는 사이드바 */
+/* 햄버거바 누르면 뜨는 사이드바 내용*/
 .item{
     z-index: 4;
     position: relative;
@@ -245,21 +245,28 @@ nav {
 
 /* Bar2-middle: 오늘의 딜,고객서비스, 기프트 카드, 판매, 레지스트리 */
 #bar2-middle{
-    margin-top: 2px;
-    margin-left: 200px;
+    color: #F6F5F0;
+    top: 0px;
+    left:200px;
+    margin-top: 5px;
     width: 700px;
     position: fixed;
-    z-index: 33;
+    position: absolute; /*absolute는 부모를 기준으로 움직인다. */
+    
+
 }
 
 /* Bar2-right: 'click here to change language' */
 #bar2-right{
     color: #F6F5F0;
-    width: 300px;
-    top:0px;
     margin-top: 5px;
-    margin-left: 800px;
+    top: 0px;
+    left:900px;
+    width: 300px;
+    height: 40px;
+    align-items: center; 
     display: fixed;
+    position: absolute; /*absolute는 부모를 기준으로 움직인다. */
 }
 
     /* MAIN SECTION */
